spec/error_trait_foul_method.expected
spec/error_trait_foul_method.kex:7:1: error: make Record, implement: Storable — method 'save' must be declared foul (trait requires it)
Aborted: fix type errors before running (use --no-check to skip).
